--- a/index.html
+++ b/index.html
@@ -6,54 +6,54 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen">
   </head>
-  <body>
-    <header class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-      <a class="more_inf" rel="noopener noreferrer" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="page">
+    <header class="header">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+      <a class="header__info-link" rel="noopener noreferrer" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
+    <main class="main">
       <h1 class="visually-hidden">Todo App</h1>
-      <section id="topSectionForAddingElementToList">
-        <h2 class="visually-hidden">Add todo</h2>
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button type="button">Add</button>
+      <section class="section" id="add-todo">
+        <h2 class="section__title visually-hidden">Add todo</h2>
+        <label class="section__title" for="new-task">Add Item</label>
+        <div class="add-todo-wrapper">
+          <input id="new-task" class="todo-list__input" type="text">
+          <button class="btn btn_add" type="button">Add</button>
         </div>
       </section>
-      <section>
-        <h2>Todo</h2>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit" type="button">Edit</button>
-            <button class="delete" type="button" aria-roledescription="Remove todo">
-              <img src="./remove.svg" alt="">
+      <section class="section">
+        <h2 class="section__title">Todo</h2>
+        <ul class="todo-list" id="incomplete-tasks">
+          <li class="todo-list__item">
+            <input class="todo-list__checkbox" type="checkbox">
+            <label class="todo-list__label">Pay Bills</label>
+            <input type="text" class="todo-list__input">
+            <button class="btn btn_edit" type="button">Edit</button>
+            <button class="btn btn_delete" type="button" aria-roledescription="Remove todo">
+              <img class="btn__icon" src="./remove.svg" alt="">
             </button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit" type="button">Save</button>
-            <button class="delete" type="button" aria-roledescription="Remove todo">
-              <img src="./remove.svg" alt="">
+          <li class="todo-list__item todo-list__item_edit editMode">
+            <input class="todo-list__checkbox" type="checkbox">
+            <label class="todo-list__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="todo-list__input">
+            <button class="btn btn_edit" type="button">Save</button>
+            <button class="btn btn_delete" type="button" aria-roledescription="Remove todo">
+              <img class="btn__icon" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Completed</h2>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit" type="button">Edit</button>
-            <button class="delete" type="button" aria-roledescription="Remove todo">
-              <img src="./remove.svg" alt="">
+      <section class="section">
+        <h2 class="section__title">Completed</h2>
+        <ul class="todo-list" id="completed-tasks">
+          <li class="todo-list__item">
+            <input class="todo-list__checkbox" type="checkbox" checked>
+            <label class="todo-list__label todo-list__label_completed">See the Doctor</label>
+            <input type="text" class="todo-list__input">
+            <button class="btn btn_edit" type="button">Edit</button>
+            <button class="btn btn_delete" type="button" aria-roledescription="Remove todo">
+              <img class="btn__icon" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
