refactor(no rule): remove unused class in HTML file + format CSS file for better readability

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <img class="btn__icon" src="./remove.svg" alt="">
             </button>
           </li>
-          <li class="todo-list__item todo-list__item_edit editMode">
+          <li class="todo-list__item todo-list__item_edit">
             <input class="todo-list__checkbox" type="checkbox">
             <label class="todo-list__label">Go Shopping</label>
             <input type="text" value="Go Shopping" class="todo-list__input">
